[project]
name = "docbridge-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastmcp>=2.13.0.1",
    "groq>=0.33.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "trafilatura>=2.0.0",
]
